--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "ldd",
   "license": "MIT",
   "scripts": {
-    "start": "electron-forge start",
+    "start": "react-scripts start & sleep 2 ; electron .",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish"
@@ -21,29 +21,37 @@
     "electron": "^16.0.2"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "electron-squirrel-startup": "^1.0.0",
+    "update-electron-app": "^2.0.1"
   },
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "osxSign": {
+          "identity": "Developer ID Application: dongdong li (Y39DTSWX9G)",
+          "hardened-runtime": true,
+          "entitlements": "public/entitlements.plist",
+          "entitlements-inherit": "public/entitlements.plist",
+          "signature-flags": "library"
+        }
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "my_electron_app"
+            "name": "ldd-IM"
           }
         },
         {
           "name": "@electron-forge/maker-zip",
           "platforms": [
             "darwin"
-          ]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {},
-          "platforms": [
-            "linux"
           ]
         }
       ],
@@ -65,5 +73,17 @@
         }
       ]
     }
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
