--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "author": "ldd",
   "license": "MIT",
   "scripts": {
-    "start": "react-scripts start & sleep 2 ; electron .",
+    "start-react": "react-scripts start",
+    "build-react": "react-scripts build",
+    "eject": "react-scripts eject",
+
+    "start-electron": "electron .",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish"
   },
+  "homepage": ".",
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.61",
     "@electron-forge/maker-deb": "^6.0.0-beta.61",
@@ -24,10 +29,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "electron-devtools-installer": "^3.2.0",
+    "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
-    "electron-squirrel-startup": "^1.0.0",
     "update-electron-app": "^2.0.1"
   },
   "config": {
