打通登錄頁與主頁面交互

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "ldd",
   "license": "MIT",
   "scripts": {
-    "start-react": "react-scripts start",
-    "build-react": "react-scripts build",
+    "start-react": "node scripts/start.js",
+    "build-react": "node scripts/start.js",
     "eject": "react-scripts eject",
     "start-electron": "electron .",
     "package": "electron-forge package",
@@ -28,6 +28,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.17.2",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-named-asset-import": "^0.3.7",
     "electron-devtools-installer": "^3.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
